MP: Update likes 2020/12/4gg10

--- a/content/mf2/2020/12/4gg10.md
+++ b/content/mf2/2020/12/4gg10.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/_macey23/status/1339669074087841792" ],
     "name" : [ "Like of @_macey23's tweet" ],
     "published" : [ "2020-12-19T10:31:00+0000" ],
     "like-of" : [ "https://twitter.com/_macey23/status/1339669074087841792" ]
