MP: Update bookmarks 2020/12/6os37

--- a/content/mf2/2020/12/6os37.md
+++ b/content/mf2/2020/12/6os37.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://news.indieweb.org/en", "https://indieweb.xyz/en/indieweb" ],
+    "syndication" : [ "https://news.indieweb.org/en/shkspr.mobi/blog/2020/02/abstinence-isnt-safe-why-quitting-social-media-isnt-the-solution/", "https://indieweb.xyz/en/indieweb" ],
     "name" : [ "Abstinence isn’t safe – why quitting social media isn’t the solution – Terence Eden’s Blog" ],
     "published" : [ "2020-12-20T10:16:00+0000" ],
     "category" : [ "social-media", "facebook" ],
