Update last week's notes

--- a/content/week-notes/2020/52.md
+++ b/content/week-notes/2020/52.md
@@ -11,7 +11,9 @@ Unfortunately didn't have Christmas day with the gang as we were planning, as I 
 
 Fortunately we had a food booked to be delivered, as Dave and Faye were meant to come down, so we had enough food booked for the Christmas period. But it has meant that we've been having to eat a bit more than usual, and I've been eating a bit of ham each time I open the fridge! We've been really enjoying the clementine yule log, and I've been making a slow start on the Tiramichou that I was meant to take home for Dad!
 
-Had a bit of a stressful time picking up the food, being told to go to different places after queuing in each place, but eventually got it, an dit wasn't _as_ busy as it could've been.
+It turns out that y'all need to read the instructions fully to prepare your Christmas dinner, so we ended up having turkey tonight, instead of on Christmas day itself, which was best as we still had a tonne of other food to have!
+
+Had a bit of a stressful time picking up the food, being told to go to different places after queuing in each place, but eventually got it, and it wasn't _as_ busy as it could've been.
 
 Got some really lovely presents, I've got some lovely peeps in my life.
 
@@ -25,8 +27,8 @@ Got some really lovely presents, I've got some lovely peeps in my life.
 - Anna and I spent a bit of time playing with Lego which was fun - my Grogo is super cute and will look awesome on my desk!
 - After not playing _Apex Legends_ for over a week, and having some of the fun stresses of maybe my PC not working due to it not shutting down OK, I've had some pretty good games this week - possibly due to the break!
 - Finally started my progress into getting libraries uploaded to Maven Central
-- Only worked Monday which was nice, as I was able to work on a few things for the sprint, but also get stuck into a shared solution for contnet negotiation for Lambdas, but I'm planning on making an open-source (clean room) implementation of a content negotiation algorithm - as well as a blog post to talk about why it's so great!
-- Had a lovely walk this morning with the gang around Attenborough Nature Reserve, and had some good chats and a slightly chilly lunch but managed to aovoid the wrath of the local hungry swans
+- Only worked Monday which was nice, as I was able to work on a few things for the sprint, but also get stuck into a shared solution for content negotiation for Lambdas, but I'm planning on making an open-source (clean room) implementation of a content negotiation algorithm - as well as a blog post to talk about why it's so great!
+- Had a lovely walk this morning with the gang around Attenborough Nature Reserve, and had some good chats and a slightly chilly lunch but managed to avoid the wrath of the local hungry swans
 - Haven't started on my year in review because I know I need to do 2019's, and that's a bit daunting!
 - Finally got the oven sorted - very last minute, but thankful - and didn't enjoy our first Gousto meal with it as it was quite a faff, and managed to have a bit of a risky meal
 - Watched _Wonder Woman 1984_ was good, but not as good as the first, or the hype unfortunately
