fixup! Update last week's notes

--- a/content/week-notes/2020/52.md
+++ b/content/week-notes/2020/52.md
@@ -17,6 +17,7 @@ Had a bit of a stressful time picking up the food, being told to go to different
 
 Got some really lovely presents, I've got some lovely peeps in my life.
 
+- Had four trees up in the house - got a lovely one from Bloom and Wild from the family, we had a small one already, then Anna's jazzy one for her office, and our primary tree in the living room
 - Morph is still settling in OK, and doesn't seem to be stressed, which is still very positive and is helping my stress levels too!
   - He's not understood how doors work (not helped by me teaching him to tap it, not pull it) as he's had to unlearn years of door knowledge
   - He's quite insistent he be able to explore the house a bit more, which has been a bit annoying, trying to be aware of where he is and that the doors are closed
