MP: Update likes 2020/12/2178e

--- a/content/mf2/2020/12/2178e.md
+++ b/content/mf2/2020/12/2178e.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/baddanadanabad/status/1343303373286637569" ],
     "name" : [ "Like of @baddanadanabad's tweet" ],
     "published" : [ "2020-12-28T14:48:00+0000" ],
     "like-of" : [ "https://twitter.com/baddanadanabad/status/1343303373286637569" ]
