--- a/content/mf2/2020/12/10839.md
+++ b/content/mf2/2020/12/10839.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/piccalilli_/status/1344669781664927746" ],
     "name" : [ "Like of @piccalilli_'s tweet" ],
     "published" : [ "2020-12-31T15:57:00+0000" ],
     "category" : [ "food" ],
