MP: Update likes 2021/01/0al71

--- a/content/mf2/2021/01/0al71.md
+++ b/content/mf2/2021/01/0al71.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/tinymakesthings/status/1344734621351563264" ],
     "name" : [ "Like of @tinymakesthings's tweet" ],
     "published" : [ "2021-01-01T15:46:00+0000" ],
     "category" : [ "mechanical-keyboard" ],
