--- a/content/mf2/2021/01/vc589.md
+++ b/content/mf2/2021/01/vc589.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/alexandrakuri/status/1345870860129808384" ],
     "name" : [ "Like of @alexandrakuri's tweet" ],
     "published" : [ "2021-01-04T14:58:00+0000" ],
     "like-of" : [ "https://twitter.com/alexandrakuri/status/1345870860129808384" ]
