--- a/content/mf2/2021/01/1vu97.md
+++ b/content/mf2/2021/01/1vu97.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/QuinnyPig/status/1346201613287837697" ],
     "name" : [ "Like of @QuinnyPig's tweet" ],
     "published" : [ "2021-01-04T23:21:00+0000" ],
     "like-of" : [ "https://twitter.com/QuinnyPig/status/1346201613287837697" ]
