--- a/content/mf2/2021/01/258qy.md
+++ b/content/mf2/2021/01/258qy.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/sil/status/1346200310939865089" ],
     "name" : [ "Like of @sil's tweet" ],
     "published" : [ "2021-01-05T14:27:00+0000" ],
     "category" : [ "doctor-who" ],
