MP: Update likes 2021/01/za555

--- a/content/mf2/2021/01/za555.md
+++ b/content/mf2/2021/01/za555.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/foxgirl_IRL/status/1347951266111000581" ],
     "name" : [ "Like of @foxgirl_IRL's tweet" ],
     "published" : [ "2021-01-09T19:57:00+0000" ],
     "like-of" : [ "https://twitter.com/foxgirl_IRL/status/1347951266111000581" ]
