--- a/content/mf2/2021/01/f6h58.md
+++ b/content/mf2/2021/01/f6h58.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/sarah_edo/status/1348157423861735424" ],
     "name" : [ "Like of @sarah_edo's tweet" ],
     "published" : [ "2021-01-10T14:22:00+0000" ],
     "category" : [ "politics", "satire" ],
