Update previous week notes

--- a/content/week-notes/2020/49.md
+++ b/content/week-notes/2020/49.md
@@ -25,3 +25,5 @@ A slog of a week and _A Little Chaos_ being the metaphorical soundtrack to the w
 - Morph's been enjoying sitting on one of the dining room chairs, waiting for us coming in
 - Watched a lot of _Between Two Ferns_ on YouTube, and am still not sure if it's quite real, but there are some really great - and painful - interviews
 - Started watching the new season of _Big Mouth_
+- Didn't do any ring fit ahead of the move
+- Definitely feeling myself burning out
