--- a/content/week-notes/2020/50.md
+++ b/content/week-notes/2020/50.md
@@ -30,3 +30,5 @@ Also:
 - A difficult sprint planning due to reduced capacity, too much work to do, and not wanting to stretch ourselves unnecessarily given it's winding down for the year!
 - Had a quiet last day of work on Thursday, but then had a bit of stress due to some innersourcing - I'll be interested to see how things happened when I'm back in the office
 - Got my blog out for my new IndieAuth server, and got a fair bit of traffic from the various aggregators I'd posted it to
+- Been finding my hands very sore and dry after all this manual labour!
+- Learnt that you can say "Alexa, dismiss" instead of "Alexa, stop", and it doesn't have the risk of another Alexa hearing you and stopping the music!
