--- a/content/week-notes/2020/51.md
+++ b/content/week-notes/2020/51.md
@@ -37,3 +37,6 @@ Been pretty chaotic with quite a few things needing to be bought / replaced and 
 - Had a pretty bad week for sleep - poor eating and stress hasn't helped
 - Got [Moving On by Phaeleh](https://phaeleh.bandcamp.com/track/moving-on) on repeat a fair bit this weekend
 - Fit the washing machine myself, which I was pretty happy with (even if it is a small thing overall)
+- A week of very dry hands
+- Attempted to take the oven from the old house, and got as far as almost getting it into the car before realising it wouldn't quite fit - in any of the combinations we put - for safety reasons. So close, but at least we didn't need to then take it out of the car, and bring it back to the old house
+- Been using the living room as a "cat lock" (airlock) for Morph to allow us to safely move in and out of downstairs without him being able to escape
