--- a/content/week-notes/2021/01.md
+++ b/content/week-notes/2021/01.md
@@ -31,3 +31,5 @@ A bit of a blue end to the year / start to the new one.
 - Watched a lot of _Saturday Night Live_ on YouTube
 - Watched _Office Christmas Party_
 - Watched _The Bourne Identity_
+- Anna got a bread maker, which has been very exciitng, and we're hoping to start reducing our need to go outside for key supplies (i.e. bread)
+- Realised we probably should've cut my hair, as it's very much getting in my eyes
