Add note about Camembert

--- a/content/week-notes/2021/02.md
+++ b/content/week-notes/2021/02.md
@@ -34,6 +34,7 @@ The first full week of 2021, and the beginning of a two-week planning sprint:
 - Thursday was a day of _all_ the deliveries, and double glazing enquiries
 - Still more instability with my work Mac, and the replacement not yet working
 - Morph is especially soft this week
+- Finished the last non-frozen Christmas food - a baking Camembert. I had a fair chunk of it for lunch on Thursday, then we had Camembert tuna melts on friday 😋
 - Mostly caught up on _Star Trek: Discovery_
 - Watched _The Bourne Identity_
 - Watched _The Bourne Supremacy_
