Cleanup typos + whitespace in last week's notes

--- a/content/week-notes/2021/02.md
+++ b/content/week-notes/2021/02.md
@@ -11,17 +11,17 @@ The first full week of 2021, and the beginning of a two-week planning sprint:
 - Had a fair bit of traffic for my Content Negotiation article, but not much discussion
 - A couple of days of mop-up for last year's stories, and then the start of planning
   - Scripted some stats for PR review lifecycles, after going through some of it manually as a team, and hoping to learn some good things out of it
-  - Been driving things a bit more than I'd hoped, and had to have a few words about being present / participating, which is difficult because I'm also not alwasy participating cause I've got other things going on (like prod issues)
+  - Been driving things a bit more than I'd hoped, and had to have a few words about being present / participating, which is difficult because I'm also not always participating cause I've got other things going on (like prod issues)
   - Dealing with a couple of underlying production defects and deciding to fix them in planning is adding extra work, but is the right call
   - Shama's unfortunately not been back due to flight issues, so planning has been a bit more hands-on for Nic and I, but she'll be back tomorrow!
-  - Some exciting news for a new starter joing!
+  - Some exciting news for a new starter joining!
 - Maybe some positive news coming for a friend 🤞
 - "Rambunctious" was the word of the week
 - Had a fun day of FireFox Nightly on Android crashing when it opened, but it was fixed the next day - I really should've put up a bug report, but just ended up working around it
 - Been a good week for _Apex Legends_
-  - Enjoying the Airdrop Escalation takeover as a differnet approach to the regular game, and has been pretty fun
+  - Enjoying the Airdrop Escalation takeover as a different approach to the regular game, and has been pretty fun
   - Got my first 2k damage badge on an especially good game with Pathfinder (chosen by accident)
-  - Played some more  with Andrew, who enjoyed me blaming audio issues on him depsite them being my fault
+  - Played some more with Andrew, who enjoyed me blaming audio issues on him despite them being my fault
 - Morph has had his first taste of freedom in the new house, and spent a while sniffing around and just generally not being sure what was going on, but seems to have settled a little. He's still not got free reign, and despite my best wishes for him to be fixed, the first occurrence of spraying is only a matter of time
 - A weekend of projects for us both, as well as the new bar stools, and more Hue setup
 - Google Home's Hue integration worked again, so at least I can control my lights from my office
