Update last week's notes

--- a/content/week-notes/2021/02.md
+++ b/content/week-notes/2021/02.md
@@ -36,6 +36,8 @@ The first full week of 2021, and the beginning of a two-week planning sprint:
 - Morph is especially soft this week
 - Finished the last non-frozen Christmas food - a baking Camembert. I had a fair chunk of it for lunch on Thursday, then we had Camembert tuna melts on friday 😋
 - Mostly caught up on _Star Trek: Discovery_
+- Dyson wanted me to assemble the bits for the hoover myself, and I've just not gotten around to taking it apart
+- Cut my hair!
 - Watched _The Bourne Identity_
 - Watched _The Bourne Supremacy_
 - Watched _The Bourne Ultimatum_
