Added note about wandaVision

--- a/content/week-notes/2021/03.md
+++ b/content/week-notes/2021/03.md
@@ -33,3 +33,4 @@ The middle of a two-week planning sprint, and a busy weekend around the house:
 - Watched (the end of) _Star Trek: Discovery_
 - Watched half of _Space Force_
 - Watched _State of Play_
+- Watched _WandaVision_
