MP: Update likes 2021/01/3z86g

--- a/content/mf2/2021/01/3z86g.md
+++ b/content/mf2/2021/01/3z86g.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/ericawilsonx/status/1352980597149491201" ],
     "name" : [ "Like of @ericawilsonx's tweet" ],
     "published" : [ "2021-01-24T14:07:00+0000" ],
     "category" : [ "coronavirus" ],
