--- a/content/week-notes/2021/04.md
+++ b/content/week-notes/2021/04.md
@@ -4,7 +4,7 @@ description: "What happened in the week of 2021-01-18?"
 date: 2021-01-24T22:36:42+0000
 ---
 
-A pretty frustrating, draining and not great mental health week:
+A pretty frustrating, draining, tense and not great mental health week:
 
 - The end of planning finally came, but was made more frustrating by requests to replan, despite having spent the last two weeks doing all we could to get everyone on the same page, expectations hadn't been communicated to us. May have lost my cool a little, but looking to see what we can do to support the rest of the programme, where appropriate
 - Looking forward to having feature champions at work, empowering the team more, and being able to learn to let go a little bit
@@ -23,13 +23,17 @@ A pretty frustrating, draining and not great mental health week:
 - Noticed that post-deploy and google-fit weren't working because my expiring tokens had expired. Woops! Put in an intermediate fix to refresh them, and to allow me to manually auth, but hoping to put in refresh tokens before too long
 - Had a nice chat with Anna's family, and Morph stayed for the whole time on my lap
 - Had a few instances of wondering if Morph had sprayed, and then watched him spray, despite us shouting at him, so I guess 38 days is the record
-- Motivaton for "what to do next", www-api wise, has been fairly low, as I'm not really sure what I want to focus on
+  - Been especially difficult because, even though I've been joking "he's fixed now", I had really hoped that it was a location thing. But appears that it's just him and it's life again, which is proper disheartening
+- Motivation for "what to do next", www-api wise, has been fairly low, as I'm not really sure what I want to focus on
 - Walked over to the old house to have a look, and on the way back almost adopted a kitty that followed us for _ages_
 - Grow promotions were announced, and some well deserving names! <span style="display: hidden">Although I did sleep pretty poorly the night before</span>
 - Caught up with a few folks I've not spoken to for quite some time
 - Put WD40 on several of the squeaky doors, and then realised that it means the living room door doesn't stay open for Morph, as he deffo can't cope with opening the door himself
 - Coming in to work one day and realising my mouse had run out of battery was annoying, but at least I was able to use my trackpad
 - Had some "quiet time" over a tea break
+- Been a pretty bad week for sleep - not slept amazingly, and stayed up too late over the weekend
+- Ended up coming late to standups two days in a row because I kept thinking it started 5 mins later than it did
+- Had a fair bit more chocolate than I should've
 
 Watched:
 
