MP: Update likes 2021/01/66kh4

--- a/content/mf2/2021/01/66kh4.md
+++ b/content/mf2/2021/01/66kh4.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/lornajane/status/1353757784987344897" ],
     "name" : [ "Like of @lornajane's tweet" ],
     "published" : [ "2021-01-25T18:49:00+0000" ],
     "category" : [ "coronavirus" ],
