--- a/content/mf2/2021/01/ze045.md
+++ b/content/mf2/2021/01/ze045.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/TheKalenAllen/status/1353074300144685056" ],
     "name" : [ "Like of @TheKalenAllen's tweet" ],
     "published" : [ "2021-01-25T22:09:00+0000" ],
     "category" : [ "tiktok" ],
