MP: Update likes 2021/01/8y77g

--- a/content/mf2/2021/01/8y77g.md
+++ b/content/mf2/2021/01/8y77g.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/wlwjadzia/status/1353734744270278658" ],
     "name" : [ "Like of @wlwjadzia's tweet" ],
     "published" : [ "2021-01-27T08:16:00+0000" ],
     "category" : [ "star-trek" ],
