--- a/content/mf2/2021/01/y960u.md
+++ b/content/mf2/2021/01/y960u.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/philshapiro/status/1354570390165729283" ],
     "name" : [ "Like of @philshapiro's tweet" ],
     "published" : [ "2021-01-28T07:46:00+0000" ],
     "category" : [ "linux", "windows" ],
