Update last week's notes

--- a/content/week-notes/2021/05.md
+++ b/content/week-notes/2021/05.md
@@ -21,6 +21,7 @@ An odd week, and Morph returned to being himself again:
 - Had the last of the Christmas Cook food on Sunday
 - Almost ready to order new door and windows
 - Really enjoying the speed of my site now I'm on CloudFront + S3
+- Morph's now got a treat bowl, like Luna
 
 Watched:
 
