MP: Update likes 2021/02/6az41

--- a/content/mf2/2021/02/6az41.md
+++ b/content/mf2/2021/02/6az41.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/CarolSaysThings/status/1356340268723744769" ],
     "name" : [ "Like of @CarolSaysThings's tweet" ],
     "published" : [ "2021-02-01T21:14:00+0000" ],
     "like-of" : [ "https://twitter.com/CarolSaysThings/status/1356340268723744769" ]
