MP: Update likes 2021/02/1e751

--- a/content/mf2/2021/02/1e751.md
+++ b/content/mf2/2021/02/1e751.md
@@ -3,7 +3,7 @@
   "deleted" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/nirushika/status/1358719437390696448" ],
     "name" : [ "Like of @nirushika's tweet" ],
     "published" : [ "2021-02-08T10:45:00+0000" ],
     "like-of" : [ "https://twitter.com/nirushika/status/1358719437390696448" ]
