--- a/content/week-notes/2021/06.md
+++ b/content/week-notes/2021/06.md
@@ -2,5 +2,6 @@
 title: "Week Notes 21#06"
 description: "What happened in the week of 2021-02-08?"
 date: "2021-02-14T23:00:00Z"
+draft: true
 ---
 <div>My first week notes using Micropub!</div>
