MP: Update article week-notes/2021/06

--- a/content/week-notes/2021/06.md
+++ b/content/week-notes/2021/06.md
@@ -4,4 +4,5 @@ description: "What happened in the week of 2021-02-08?"
 date: "2021-02-14T23:00:00Z"
 draft: true
 ---
-<div>My first week notes using Micropub!</div>
+My first week notes using Micropub!
+Took a bit of integration fun, but should be a nicer experience.
