MP: Update article week-notes/2021/06

--- a/content/week-notes/2021/06.md
+++ b/content/week-notes/2021/06.md
@@ -5,4 +5,5 @@ date: "2021-02-14T23:00:00Z"
 draft: true
 ---
 My first week notes using Micropub!
-Took a bit of integration fun, but should be a nicer experience.
+
+Enjoying it, despite the integration issues.
