MP: Update article week-notes/2021/06

--- a/content/week-notes/2021/06.md
+++ b/content/week-notes/2021/06.md
@@ -6,4 +6,6 @@ draft: true
 ---
 My first week notes using Micropub!
 
-Enjoying it, despite the integration issues.
+Enjoying it, despite the integration issues
+
+Morph spent Saturday morning exploring the windowsill
