MP: Update article week-notes/2021/06

--- a/content/week-notes/2021/06.md
+++ b/content/week-notes/2021/06.md
@@ -4,7 +4,11 @@ description: "What happened in the week of 2021-02-08?"
 date: "2021-02-14T23:00:00Z"
 draft: true
 ---
-My first week notes using Micropub!
+- My first week notes using Micropub!
+  - It's pretty cool to be able to publish these at any point now, updating them more easily using Micropub than being required to do it on my desktop/laptop. It's generally how it will be done, but right now this sentence is being written between games of Apex on Windows, which is pretty great.
+  - Took a bit of wrangling, and a few precursor pieces to get it set up, but I'm liking the ability to start writing articles on here, even if it's just Week Notes supported for now - the majority of the work is already done!
+  - Had a few integration issues, which led to a kinda stressful Friday night getting them sorted, as I wanted to go downstairs and enjoy the new Mario game, but also wanted this kinda sorted, so I could start writing them if I wanted
+
 
 Enjoying it, despite the integration issues
 
