--- a/content/week-notes/2021/06.md
+++ b/content/week-notes/2021/06.md
@@ -9,5 +9,7 @@ draft: true
   - Took a bit of wrangling, and a few precursor pieces to get it set up, but I'm liking the ability to start writing articles on here, even if it's just Week Notes supported for now - the majority of the work is already done!
   - Had a few integration issues, which led to a kinda stressful Friday night getting them sorted, as I wanted to go downstairs and enjoy the new Mario game, but also wanted this kinda sorted, so I could start writing them if I wanted
 - Been spending the week being excited for Mario 3D World (as something different to do, and cause I love Mario games) and have been really enjoying it so far. Especially loving the fact that I can play as a cat!
+- Been getting a lot more electric shocks this week, mostly with Morph 🤔
+
 
 Morph spent Saturday morning exploring the windowsill
