--- a/content/week-notes/2021/06.md
+++ b/content/week-notes/2021/06.md
@@ -10,5 +10,5 @@ draft: true
   - Had a few integration issues, which led to a kinda stressful Friday night getting them sorted, as I wanted to go downstairs and enjoy the new Mario game, but also wanted this kinda sorted, so I could start writing them if I wanted
 - Been spending the week being excited for Mario 3D World (as something different to do, and cause I love Mario games) and have been really enjoying it so far. Especially loving the fact that I can play as a cat! 
 - Everything has seemed a little more difficult this week life wise, and rethinking priorities re house / income
-
+- Trialled reusing a teabag for tea on Saturday, as we were only having small mugs - turns out it doesn't work, so isn't ever gonna be a good cost saving measure 🤷🏽‍♂️
 Morph spent Saturday morning exploring the windowsill
