MP: Update article week-notes/2021/06

--- a/content/week-notes/2021/06.md
+++ b/content/week-notes/2021/06.md
@@ -4,11 +4,25 @@ description: "What happened in the week of 2021-02-08?"
 date: "2021-02-14T23:00:00Z"
 draft: true
 ---
+"Sometimes you get the giraffe, sometimes you get the wig"
+
 - My first week notes using Micropub!
   - It's pretty cool to be able to publish these at any point now, updating them more easily using Micropub than being required to do it on my desktop/laptop. It's generally how it will be done, but right now this sentence is being written between games of Apex on Windows, which is pretty great.
   - Took a bit of wrangling, and a few precursor pieces to get it set up, but I'm liking the ability to start writing articles on here, even if it's just Week Notes supported for now - the majority of the work is already done!
   - Had a few integration issues, which led to a kinda stressful Friday night getting them sorted, as I wanted to go downstairs and enjoy the new Mario game, but also wanted this kinda sorted, so I could start writing them if I wanted
 - Been spending the week being excited for Mario 3D World (as something different to do, and cause I love Mario games) and have been really enjoying it so far. Especially loving the fact that I can play as a cat! 
 - Everything has seemed a little more difficult this week life wise, and rethinking priorities re house / income
-- Trialled reusing a teabag for tea on Saturday, as we were only having small mugs - turns out it doesn't work, so isn't ever gonna be a good cost saving measure 🤷🏽‍♂️
-Morph spent Saturday morning exploring the windowsill
+- Trialed reusing a teabag for tea on Saturday, as we were only having small mugs - turns out it doesn't work, so isn't ever gonna be a good cost saving measure 🤷🏽‍♂️
+
+- A nice weekend of _Superstore_, Mario 3D World, and sofa snuggles
+  - Morph spent Saturday morning exploring [the windowsill, from the outside](/mf2/2021/02/pugcw/)
+- Tried Ohanne's for the first time, which was pretty good - although it arrived just as I was playing my first game of Apex of the day, and threw the game despite being in the final two
+
+- Got `draft` scope and `post-status` implemented this week, which is useful for my week notes!
+
+
+Watched:
+
+- _The Accountant_
+- _Superstore_
+- _WandaVision_
