MP: Update article week-notes/2021/06

--- a/content/week-notes/2021/06.md
+++ b/content/week-notes/2021/06.md
@@ -16,9 +16,15 @@ draft: true
 
 - A nice weekend of _Superstore_, Mario 3D World, and sofa snuggles
   - Morph spent Saturday morning exploring [the windowsill, from the outside](/mf2/2021/02/pugcw/)
+  - He's also been snuggling under the sofa 
 - Tried Ohanne's for the first time, which was pretty good - although it arrived just as I was playing my first game of Apex of the day, and threw the game despite being in the final two
-
+- Got a really nice handmade card today
 - Got `draft` scope and `post-status` implemented this week, which is useful for my week notes!
+- Been supporting with the proxy pattern integrations for some of our existing services in the goal team which seem to have gone well
+- A fairly hands off week again, so been doing a bit of multitasking
+- Weirdly this week I've been remembering my dreams a lot better - I've been Bond, doing something with tokens, I've been in the Capitol, and I've been dreaming about Micropub for syndication
+- Spoke about logging at the CoP which was good, and hoping to get more consumers for pickle-logs
+
 
 
 Watched:
