MP: Update article week-notes/2021/06

--- a/content/week-notes/2021/06.md
+++ b/content/week-notes/2021/06.md
@@ -13,7 +13,6 @@ draft: true
 - Been spending the week being excited for Mario 3D World (as something different to do, and cause I love Mario games) and have been really enjoying it so far. Especially loving the fact that I can play as a cat! 
 - Everything has seemed a little more difficult this week life wise, and rethinking priorities re house / income
 - Trialed reusing a teabag for tea on Saturday, as we were only having small mugs - turns out it doesn't work, so isn't ever gonna be a good cost saving measure 🤷🏽‍♂️
-
 - A nice weekend of _Superstore_, Mario 3D World, and sofa snuggles
   - Morph spent Saturday morning exploring [the windowsill, from the outside](/mf2/2021/02/pugcw/)
   - He's also been snuggling under the sofa 
@@ -25,10 +24,8 @@ draft: true
 - Weirdly this week I've been remembering my dreams a lot better - I've been Bond, doing something with tokens, I've been in the Capitol, and I've been dreaming about Micropub for syndication
 - Spoke about logging at the CoP which was good, and hoping to get more consumers for pickle-logs
 
-
-
 Watched:
 
 - _The Accountant_
-- _Superstore_
+- _Superstore_ (and lots of it!)
 - _WandaVision_
