--- a/content/week-notes/2021/06.md
+++ b/content/week-notes/2021/06.md
@@ -23,6 +23,9 @@ draft: true
 - A fairly hands off week again, so been doing a bit of multitasking
 - Weirdly this week I've been remembering my dreams a lot better - I've been Bond, doing something with tokens, I've been in the Capitol, and I've been dreaming about Micropub for syndication
 - Spoke about logging at the CoP which was good, and hoping to get more consumers for pickle-logs
+- Another week of only 2 days of Ring Fit - found everything going on has made it harder to get up - but hoping to do better this week!
+- Caught up on _The _Expanse_ books, so now have to wait until November for the final book. Got some books from Secret Santa, and a few of the Expanse novellas to keep me going until then
+- Change violations due to not getting answers from other teams / doing due diligence has been pretty disappointing for us as a team, but is hopefully it'll be positive long-term
 
 Watched:
 
