MP: Update article week-notes/2021/06

--- a/content/week-notes/2021/06.md
+++ b/content/week-notes/2021/06.md
@@ -27,6 +27,7 @@ draft: true
 - Another week of only 2 days of Ring Fit - found everything going on has made it harder to get up - but hoping to do better this week!
 - Caught up on _The _Expanse_ books, so now have to wait until November for the final book. Got some books from Secret Santa, and a few of the Expanse novellas to keep me going until then
 - Whitesource bit us this week, which was really annoying, and has had some wider impacts unfortunately
+- Fixed the dates of my week notes so if you thought you'd already seen week 6, that is why - I'd not counted week numbers right (I knew it, but as part of implementing support in my site I realised I needed to do it right
 
 Watched:
 
