MP: Update article week-notes/2021/06

--- a/content/week-notes/2021/06.md
+++ b/content/week-notes/2021/06.md
@@ -2,6 +2,7 @@
 title: "Week Notes 21#06"
 description: "What happened in the week of 2021-02-08?"
 date: "2021-02-14T22:38:00Z"
+draft: true
 ---
 "Sometimes you get the giraffe, sometimes you get the wig"
 
@@ -27,6 +28,7 @@ date: "2021-02-14T22:38:00Z"
 - Caught up on _The _Expanse_ books, so now have to wait until November for the final book. Got some books from Secret Santa, and a few of the Expanse novellas to keep me going until then
 - Whitesource bit us this week, which was really annoying, and has had some wider impacts unfortunately
 - Fixed the dates of my week notes so if you thought you'd already seen week 6, that is why - I'd not counted week numbers right (I knew it, but as part of implementing support in my site I realised I needed to do it right
+- Been getting a lot of electric shocks this week from Morph
 
 Watched:
 
