MP: Update article week-notes/2021/06

--- a/content/week-notes/2021/06.md
+++ b/content/week-notes/2021/06.md
@@ -28,6 +28,7 @@ date: "2021-02-14T22:38:00Z"
 - Whitesource bit us this week, which was really annoying, and has had some wider impacts unfortunately
 - Fixed the dates of my week notes so if you thought you'd already seen week 6, that is why - I'd not counted week numbers right (I knew it, but as part of implementing support in my site I realised I needed to do it right
 - Been getting a lot of electric shocks this week from Morph
+- Got confirmation that Capital One won't be reopening our offices until at least September
 
 Watched:
 
