MP: Update likes 2021/02/628y7

--- a/content/mf2/2021/02/628y7.md
+++ b/content/mf2/2021/02/628y7.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/purpleidea/status/1361373574255292425" ],
     "name" : [ "Like of @purpleidea's tweet" ],
     "published" : [ "2021-02-15T23:14:00+0000" ],
     "category" : [ "sparkling" ],
