MP: Update article week-notes/2021/07

--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -4,4 +4,5 @@ description: "What happened in the week of 2021-02-15?"
 date: "2021-02-15T20:00:06Z"
 draft: true
 ---
-<div>- Started the week off pretty well with a lie in (as I'd forgotten to re-enable my Ring Fit morning alarms, and took our leftover Ohanne's chips and chicken and made a pretty good [loaded fries](https://media.jvt.me/4ca2b6fdc7.jpeg)</div>
+- Started the week off pretty well with a lie in (as I'd forgotten to re-enable my Ring Fit morning alarms, and took our leftover Ohanne's chips and chicken and made a pretty good [loaded fries](https://media.jvt.me/4ca2b6fdc7.jpeg)
+- Couldn't use Twitter for a bit on Wednesday, as the app kept crashing after muting someone who was being promoted from a topic
