--- a/content/mf2/2021/02/l943s.md
+++ b/content/mf2/2021/02/l943s.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/KingstonTime/status/1362155125305966592" ],
     "name" : [ "Like of @KingstonTime's tweet" ],
     "published" : [ "2021-02-17T22:36:00+0000" ],
     "category" : [ "firefox" ],
