--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -8,3 +8,4 @@ draft: true
 - Couldn't use Twitter for a bit on Wednesday, as the app kept crashing after muting someone who was being promoted from a topic
 - had a dream about Lombok
 - McD
+- Went to Lidl (twice in the same morning) to get bits for the week, which has meant this week has been drowning in Morph's meowing begging for chicken
