MP: Update article week-notes/2021/07

--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -9,3 +9,5 @@ draft: true
 - had a dream about Lombok
 - McD
 - Went to Lidl (twice in the same morning) to get bits for the week, which has meant this week has been drowning in Morph's meowing begging for chicken
+- doughnotts
+- Thu morning positive ceremonies - gaming / chat?
