MP: Update article week-notes/2021/07

--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -11,3 +11,9 @@ draft: true
 - Went to Lidl (twice in the same morning) to get bits for the week, which has meant this week has been drowning in Morph's meowing begging for chicken
 - doughnotts
 - Thu morning positive ceremonies - gaming / chat?
+
+Watched:
+
+- _WandaVision_
+- _Superstore_
+- _South Park_
