MP: Update article week-notes/2021/07

--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -11,9 +11,5 @@ draft: true
 - Went to Lidl (twice in the same morning) to get bits for the week, which has meant this week has been drowning in Morph's meowing begging for chicken
 - doughnotts
 - Thu morning positive ceremonies - gaming / chat?
-
-Watched:
-
-- _WandaVision_
-- _Superstore_
-- _South Park_
+- Morph has managed to hurt my nose with his aggressive kitty kisses
+- Getting hounded by my team on Friday for logging on while I was on holiday (albeit to check calendar to book windows folks coming round) was nice, and pretty proud of myself to have not checked anything
