MP: Update likes 2021/02/4p80c

--- a/content/mf2/2021/02/4p80c.md
+++ b/content/mf2/2021/02/4p80c.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/julieroginsky/status/1362783438315610117" ],
     "name" : [ "Like of @julieroginsky's tweet" ],
     "published" : [ "2021-02-19T19:33:00+0000" ],
     "category" : [ "politics" ],
