MP: Update article week-notes/2021/07

--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -13,3 +13,10 @@ draft: true
 - Thu morning positive ceremonies - gaming / chat?
 - Morph has managed to hurt my nose with his aggressive kitty kisses
 - Getting hounded by my team on Friday for logging on while I was on holiday (albeit to check calendar to book windows folks coming round) was nice, and pretty proud of myself to have not checked anything
+- Enjoyed being able to edit my week notes through the week "live", rather than updating Google Keep and then writing them later in the week - still wondering if there's something better I can do for convenience to easily open my latest post to edit
+
+Watched:
+
+- _WandaVision_
+- _Superstore_
+- _South Park_
