MP: Update article week-notes/2021/07

--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -15,6 +15,7 @@ draft: true
 - Getting hounded by my team on Friday for logging on while I was on holiday (albeit to check calendar to book windows folks coming round) was nice, and pretty proud of myself to have not checked anything
 - Enjoyed being able to edit my week notes through the week "live", rather than updating Google Keep and then writing them later in the week - still wondering if there's something better I can do for convenience to easily open my latest post to edit
 - Done some budgeting for the year, and realised that, although I'm still really quite well off, it's not by the margin I had last year - who knew that buying a big house would result in less savings??
+- Got committer access to Cucumber, which was surprising but awesome!
 
 Watched:
 
