--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -16,6 +16,7 @@ draft: true
 - Enjoyed being able to edit my week notes through the week "live", rather than updating Google Keep and then writing them later in the week - still wondering if there's something better I can do for convenience to easily open my latest post to edit
 - Done some budgeting for the year, and realised that, although I'm still really quite well off, it's not by the margin I had last year - who knew that buying a big house would result in less savings??
 - Got committer access to Cucumber, which was surprising but awesome!
+- Only one Ring Fit this week, but hoping next week will be better
 
 Watched:
 
