MP: Update article week-notes/2021/07

--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -18,6 +18,7 @@ draft: true
 - Got committer access to Cucumber, which was surprising but awesome!
 - Only one Ring Fit this week, but hoping next week will be better
 - Morph has been trying our patience as ever
+- A stressful Asda shop, with no pizza to show for it
 
 Watched:
 
