--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -19,6 +19,7 @@ draft: true
 - Only one Ring Fit this week, but hoping next week will be better
 - Morph has been trying our patience as ever
 - A stressful Asda shop, with no pizza to show for it
+- Got the first Easter egg + Lindt bunny of the season
 
 Watched:
 
@@ -26,3 +27,4 @@ Watched:
 - _Superstore_
 - _South Park_
 - Bits of _The Crown_
+- _Bridesmaids_ with the gang
