MP: Update article week-notes/2021/05

--- a/content/week-notes/2021/05.md
+++ b/content/week-notes/2021/05.md
@@ -22,10 +22,12 @@ Another odd week at work, not really doing much, but doing a few bits outside th
 - Not quite as low a week as last week, but pretty drained, still
 - Had a tonne of rain, which has meant the cellar was flooded to about an inch under the first step, so this weekend was the first time using the pump, which worked very nicely, and got about half the water out in half an hour or so, which was quite nice
 - Cat got her vaccine!
+- Got my dailies in before work on Thursday
+- Dun goofed and thought a 40 minute meal was a prep in 5
 
 Watched:
 
-- _The Expanse_, which ended the season really well, and gave us our first look at Laconia
+- _The Expanse_, which ended the season really well, with a very emotional episode, and gave us our first look at Laconia
 - _WandaVision_
 - _Big Mouth_
 - _Greenland_
