MP: Update article week-notes/2021/07

--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -20,6 +20,7 @@ draft: true
 - Morph has been trying our patience as ever
 - A stressful Asda shop, with no pizza to show for it
 - Got the first Easter egg + Lindt bunny of the season
+- Three nights of bad sleeping habits
 
 Watched:
 
