MP: Update article week-notes/2021/07

--- a/content/week-notes/2021/07.md
+++ b/content/week-notes/2021/07.md
@@ -17,7 +17,7 @@ draft: true
 - Done some budgeting for the year, and realised that, although I'm still really quite well off, it's not by the margin I had last year - who knew that buying a big house would result in less savings??
 - Got committer access to Cucumber, which was surprising but awesome!
 - Only one Ring Fit this week, but hoping next week will be better
-- Morph has been trying our patience as ever
+- Morph has been trying our patience as ever, while being as cute as is possible to make it less annoying. Also been pushing our 2 seater sofa to its limits 😂
 - A stressful Asda shop, with no pizza to show for it
 - Got the first Easter egg + Lindt bunny of the season
 - Three nights of bad sleeping habits
